Fixes CSS alignment issue

--- a/src/pages/blocks/Blocks.scss
+++ b/src/pages/blocks/Blocks.scss
@@ -14,9 +14,6 @@
   img {
     margin-right: 12px;
   }
-  span {
-    margin-bottom: -4px;
-  }
 }
 
 .neo2-platform-cell {
@@ -25,10 +22,6 @@
   display: flex;
   align-items: center;
   color: #b0eb3c !important;
-
-  span {
-    margin-bottom: -4px;
-  }
 
   img {
     margin-right: 12px;
