--- a/src/pages/transactions/Transactions.scss
+++ b/src/pages/transactions/Transactions.scss
@@ -14,9 +14,6 @@
       margin-right: 12px;
       max-width: 29px;
     }
-    span {
-      margin-bottom: -4px;
-    }
   }
 
   .neo2-platform-cell {
@@ -25,10 +22,6 @@
     display: flex;
     align-items: center;
     color: #b0eb3c;
-
-    span {
-      margin-bottom: -4px;
-    }
 
     img {
       margin-right: 12px;
